[tool.poetry]
name = "yestabak_app"
version = "0.0.1"
description = ""
authors = ["enganese <b-android@mail.ru>", "ggindinson"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
aiogram = {url = "https://github.com/aiogram/aiogram/archive/refs/heads/dev-3.x.zip"}


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
